- Added packed mud, created by piston packing two mud blocks.
- Added mud brick, created with 4 packed mud in a crafting grid, along with associated sub blocks.
- Added new wood types: mahogany, mangrove, hazel, fir
    - For the purposes of smelting and tanning:
        - Mahogany and mangrove are equivalent to jungle
        - Hazel is equivalent to oak
        - Fir is equivalent to birch
- Changed autumn saplings to produce different wood types depending on color.
- Changed sapling recipes:
    - All sapling recipes can use either dung or fertilizer, and are performed in a cauldron.
    - Cherry saplings require an oak sapling, pink dye, and a fertilizer.
    - Acacia saplings require a birch sapling, orange dye, and a fertilizer.
    - Mahogany saplings require a jungle sapling, red dye, and a fertilizer.
    - Mangrove saplings require a jungle sapling, orange dye, and a fertilizer.
    - Hazel saplings require an oak sapling, brown dye, and a fertilizer.
    - Fir saplings require a spruce sapling, white dye (or bonemeal), and a fertilizer.
    - Red autumn saplings require a cherry sapling, red dye, and a fertilizer.
    - Orange autumn saplings require an oak sapling, orange dye, and a fertilizer.
    - Yellow autumn saplings require a birch sapling, yellow dye, and a fertilizer.
- Added the ability for cocoa beans to grow on mangrove and mahogany logs.
- Added calcite - loose calcite cobblestone can be crated by combining loose diorite cobblestone with bonemeal in a crucible
- Added tuff - loose tuff cobblestone can be crated by combining loose cobblestone with pumice in a crucible
- Changed deco stone variants to behave consistently with BTW stone.
    - Granite, andesite, diorite, and calcite are all considered first strata.
    - Slate is considered third strata.
- Changed how lanterns render, and added item equivalents. The old blocks may be converted into items in a crafting grid.
- Changed lanterns to break when underwater.