@@ -82,7 +82,6 @@ public class MangroveSaplingBlock extends DecoSaplingBlock {
 			int blockID = world.getBlockId(x - 3, j - 1, z);
 			
 			if (blockID != 0 &&
-					blockID != Block.grass.blockID &&
 					blockID != Block.waterMoving.blockID &&
 					blockID != Block.waterStill.blockID &&
 					blockID != DecoBlocks.mangroveLeaves.blockID &&
@@ -101,12 +100,7 @@ public class MangroveSaplingBlock extends DecoSaplingBlock {
 			world.setBlock(x - 3, j, z, DecoBlocks.mangroveLog.blockID);
 		}
 		
-		if (world.getBlockId(x - 3, j, z) == Block.waterMoving.blockID) {
-			world.setBlock(x - 3, j, z, DecoBlocks.mangroveStump.blockID);
-		}
-		else {
-			world.setBlock(x - 3, j + 1, z, DecoBlocks.mangroveStump.blockID);
-		}
+		world.setBlock(x - 3, j + 1, z, DecoBlocks.mangroveStump.blockID);
 		
 		int offset2 = 3 + rand.nextInt(4);
 		
@@ -126,7 +120,7 @@ public class MangroveSaplingBlock extends DecoSaplingBlock {
 		for (j = y + offset2 - 3; j > 50; --j) {
 			int blockID = world.getBlockId(x + 3, j - 1, z);
 			
-			if (blockID != 0 && blockID != Block.grass.blockID && blockID != Block.waterMoving.blockID && blockID != Block.waterStill.blockID && blockID != DecoBlocks.mangroveLeaves.blockID && blockID != DecoBlocks.mangroveLog.blockID && blockID != Block.vine.blockID && blockID != Block.tallGrass.blockID) {
+			if (blockID != 0 && blockID != Block.waterMoving.blockID && blockID != Block.waterStill.blockID && blockID != DecoBlocks.mangroveLeaves.blockID && blockID != DecoBlocks.mangroveLog.blockID && blockID != Block.vine.blockID && blockID != Block.tallGrass.blockID) {
 				break;
 			}
 			rootLength++;
@@ -137,12 +131,7 @@ public class MangroveSaplingBlock extends DecoSaplingBlock {
 			world.setBlock(x + 3, j, z, DecoBlocks.mangroveLog.blockID);
 		}
 		
-		if (world.getBlockId(x + 3, j, z) == Block.waterMoving.blockID) {
-			world.setBlock(x + 3, j, z, DecoBlocks.mangroveStump.blockID);
-		}
-		else {
-			world.setBlock(x + 3, j + 1, z, DecoBlocks.mangroveStump.blockID);
-		}
+		world.setBlock(x + 3, j + 1, z, DecoBlocks.mangroveStump.blockID);
 		
 		int offset3 = 3 + rand.nextInt(4);
 		
@@ -162,7 +151,7 @@ public class MangroveSaplingBlock extends DecoSaplingBlock {
 		for (j = y + offset3 - 3; j > 50; --j) {
 			int blockID = world.getBlockId(x, j - 1, z - 3);
 			
-			if (blockID != 0 && blockID != Block.grass.blockID && blockID != Block.waterMoving.blockID && blockID != Block.waterStill.blockID && blockID != DecoBlocks.mangroveLeaves.blockID && blockID != DecoBlocks.mangroveLog.blockID && blockID != Block.vine.blockID && blockID != Block.tallGrass.blockID) {
+			if (blockID != 0 && blockID != Block.waterMoving.blockID && blockID != Block.waterStill.blockID && blockID != DecoBlocks.mangroveLeaves.blockID && blockID != DecoBlocks.mangroveLog.blockID && blockID != Block.vine.blockID && blockID != Block.tallGrass.blockID) {
 				break;
 			}
 			rootLength++;
@@ -173,12 +162,7 @@ public class MangroveSaplingBlock extends DecoSaplingBlock {
 			world.setBlock(x, j, z - 3, DecoBlocks.mangroveLog.blockID);
 		}
 		
-		if (world.getBlockId(x, j, z - 3) == Block.waterMoving.blockID) {
-			world.setBlock(x, j, z - 3, DecoBlocks.mangroveStump.blockID);
-		}
-		else {
-			world.setBlock(x, j + 1, z - 3, DecoBlocks.mangroveStump.blockID);
-		}
+		world.setBlock(x, j + 1, z - 3, DecoBlocks.mangroveStump.blockID);
 		
 		int offset4 = 3 + rand.nextInt(4);
 		
@@ -198,7 +182,7 @@ public class MangroveSaplingBlock extends DecoSaplingBlock {
 		for (j = y + offset4 - 3; j > 50; --j) {
 			int blockID = world.getBlockId(x, j - 1, z + 3);
 			
-			if (blockID != 0 && blockID != Block.grass.blockID && blockID != Block.waterMoving.blockID && blockID != Block.waterStill.blockID && blockID != DecoBlocks.mangroveLeaves.blockID && blockID != DecoBlocks.mangroveLog.blockID && blockID != Block.vine.blockID && blockID != Block.tallGrass.blockID) {
+			if (blockID != 0 && blockID != Block.waterMoving.blockID && blockID != Block.waterStill.blockID && blockID != DecoBlocks.mangroveLeaves.blockID && blockID != DecoBlocks.mangroveLog.blockID && blockID != Block.vine.blockID && blockID != Block.tallGrass.blockID) {
 				break;
 			}
 			rootLength++;
@@ -209,12 +193,7 @@ public class MangroveSaplingBlock extends DecoSaplingBlock {
 			world.setBlock(x, j, z + 3, DecoBlocks.mangroveLog.blockID);
 		}
 		
-		if (world.getBlockId(x, j, z + 3) == Block.waterMoving.blockID) {
-			world.setBlock(x, j, z + 3, DecoBlocks.mangroveStump.blockID);
-		}
-		else {
-			world.setBlock(x, j + 1, z + 3, DecoBlocks.mangroveStump.blockID);
-		}
+		world.setBlock(x, j + 1, z + 3, DecoBlocks.mangroveStump.blockID);
 	}
 	
 	private void createRainForestBranch(World world, Random rand, int x, int y, int z) {
@@ -234,7 +213,7 @@ public class MangroveSaplingBlock extends DecoSaplingBlock {
 			this.createRainForestLeaves(world, rand, x + 2, y + 1 + var6, z, 2);
 			this.createRainForestLeaves(world, rand, x + 2, y + 2 + var6, z, 1);
 			
-			for (var7 = 0; var7 <= var6; ++var7) {
+			for (var7 = 0; var7 < var6; ++var7) {
 				world.setBlock(x + 2, y + 2 + var7, z, DecoBlocks.mangroveLog.blockID);
 			}
 		}
@@ -252,7 +231,7 @@ public class MangroveSaplingBlock extends DecoSaplingBlock {
 			this.createRainForestLeaves(world, rand, x - 2, y + 1 + var6, z, 2);
 			this.createRainForestLeaves(world, rand, x - 2, y + 2 + var6, z, 1);
 			
-			for (var7 = 0; var7 <= var6; ++var7)
+			for (var7 = 0; var7 < var6; ++var7)
 			{
 				world.setBlock(x - 2, y + 2 + var7, z, DecoBlocks.mangroveLog.blockID);
 			}
@@ -271,7 +250,7 @@ public class MangroveSaplingBlock extends DecoSaplingBlock {
 			this.createRainForestLeaves(world, rand, x, y + 1 + var6, z + 2, 2);
 			this.createRainForestLeaves(world, rand, x, y + 2 + var6, z + 2, 1);
 			
-			for (var7 = 0; var7 <= var6; ++var7) {
+			for (var7 = 0; var7 < var6; ++var7) {
 				world.setBlock(x, y + 2 + var7, z + 2, DecoBlocks.mangroveLog.blockID);
 			}
 		}
@@ -289,7 +268,7 @@ public class MangroveSaplingBlock extends DecoSaplingBlock {
 			this.createRainForestLeaves(world, rand, x, y + 1 + var6, z - 2, 2);
 			this.createRainForestLeaves(world, rand, x, y + 2 + var6, z - 2, 1);
 			
-			for (var7 = 0; var7 <= var6; ++var7) {
+			for (var7 = 0; var7 < var6; ++var7) {
 				world.setBlock(x, y + 2 + var7, z - 2, DecoBlocks.mangroveLog.blockID);
 			}
 		}
